--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
   "name": "mperk/html-cleaner",
   "type": "typo3-flow-package",
   "version": "1.0.0",
-  "minimum-stability": "dev",
-  "prefer-stable": true,
+  "minimum-stability": "stable",
   "description": "",
   "authors": [
     {
