Html Cleaner Flow Package

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "mperk/html-cleaner",
   "type": "typo3-flow-package",
   "version": "1.0.0",
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "description": "",
   "authors": [
     {
