Html Cleaner Flow Package

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
   "name": "mperk/html-cleaner",
   "type": "typo3-flow-package",
-  "version": "1.0.0",
+  /*"version": "1.0.0",
   "minimum-stability": "dev",
-  "prefer-stable": true,
+  "prefer-stable": true,*/
   "description": "",
   "authors": [
     {
